deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 labels:
   app: hello-app
 name: hello-app
 namespace: default
spec:
 progressDeadlineSeconds: 600
 replicas: 1
 revisionHistoryLimit: 10
 selector:
   matchLabels:
     app: hello-app
 strategy:
   rollingUpdate:
     maxSurge: 25%
     maxUnavailable: 25%
   type: RollingUpdate
 template:
   metadata:
     labels:
       app: hello-app
   spec:
     containers:
     - image: gcr.io/google-samples/hello-app:1.0
       imagePullPolicy: IfNotPresent
       name: hello-app
       resources:
         limits:
           cpu: 500m
           ephemeral-storage: 1Gi
           memory: 2Gi
         requests:
           cpu: 500m
           ephemeral-storage: 1Gi
           memory: 2Gi
